--- a/src/Ui_Files/DockWidgets/Ui/dw_SE.ui
+++ b/src/Ui_Files/DockWidgets/Ui/dw_SE.ui
@@ -45,6 +45,11 @@
             <string>X vs Y</string>
            </property>
           </item>
+          <item>
+           <property name="text">
+            <string>Ext. Plot (third-ints)</string>
+           </property>
+          </item>
          </widget>
         </item>
         <item row="4" column="2" colspan="2">
@@ -81,7 +86,7 @@
            <string>Zero Correct</string>
           </property>
           <property name="checked">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
          </widget>
         </item>
@@ -160,68 +165,7 @@
         <string>Fit Results</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_5">
-        <item row="3" column="0">
-         <widget class="QLabel" name="label_10">
-          <property name="text">
-           <string>Line Name</string>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="0">
-         <widget class="QLabel" name="label_3">
-          <property name="text">
-           <string>Linear fit From: To</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="0" colspan="3">
-         <widget class="QCheckBox" name="line_name_checkbox">
-          <property name="text">
-           <string>Use Line Name</string>
-          </property>
-          <property name="checked">
-           <bool>false</bool>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="0">
-         <widget class="QComboBox" name="linetype_cb">
-          <item>
-           <property name="text">
-            <string>.-</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>-.</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>.</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>-</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>--</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>,</string>
-           </property>
-          </item>
-         </widget>
-        </item>
-        <item row="8" column="0" colspan="3">
-         <widget class="QTextEdit" name="fit_results_TE"/>
-        </item>
-        <item row="7" column="0" colspan="3">
+        <item row="3" column="0" colspan="5">
          <widget class="QTextBrowser" name="textBrowser">
           <property name="maximumSize">
            <size>
@@ -233,12 +177,22 @@
            <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'.AppleSystemUIFont'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;There are a few parameter for plotting if you may need it,  including what the line should look like, the color (UNDER WORK) and if the data may require you to skip inital metadata at the beginning.  Lin. Fit function makes a popup dialog where you can pick a single line on the graph to linearly fit where the fit stats will show up below. The Lin. Fit. All will fit all the data on the graph and print in the line command the slopes of the data&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'.AppleSystemUIFont'; font-size:13pt;&quot;&gt;There are a few parameter for plotting if you may need it,  including what the line should look like, the color (UNDER WORK) and if the data may require you to skip inital metadata at the beginning.  Lin. Fit function makes a popup dialog where you can pick a single line on the graph to linearly fit where the fit stats will show up below. The Lin. Fit. All will fit all the data on the graph and print in the line command the slopes of the data&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
          </widget>
         </item>
+        <item row="4" column="0" colspan="5">
+         <widget class="QTextEdit" name="fit_results_TE"/>
+        </item>
         <item row="1" column="1">
+         <widget class="QCheckBox" name="selectrange_box">
+          <property name="text">
+           <string>Select Fitting Range</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
          <widget class="QComboBox" name="axischoise_cb">
           <item>
            <property name="text">
@@ -262,56 +216,17 @@ p, li { white-space: pre-wrap; }
           </item>
          </widget>
         </item>
-        <item row="1" column="2">
-         <widget class="QComboBox" name="comboBox">
-          <item>
-           <property name="text">
-            <string>Auto Color</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Dope Red Color</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Dope Blue Color</string>
-           </property>
-          </item>
-         </widget>
-        </item>
-        <item row="9" column="0" colspan="2">
+        <item row="5" column="1" colspan="2">
          <widget class="QPushButton" name="lin_fit_pb">
           <property name="text">
            <string>Lin. Fit</string>
           </property>
          </widget>
         </item>
-        <item row="5" column="1">
-         <widget class="QDoubleSpinBox" name="doubleSpinBox"/>
-        </item>
-        <item row="9" column="2">
+        <item row="5" column="3">
          <widget class="QPushButton" name="linfitall_pb">
           <property name="text">
            <string>Lin. Fit. All</string>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="2">
-         <widget class="QLineEdit" name="line_name_le">
-          <property name="text">
-           <string>Extended_Plot</string>
-          </property>
-         </widget>
-        </item>
-        <item row="6" column="1">
-         <widget class="QDoubleSpinBox" name="doubleSpinBox_2">
-          <property name="maximum">
-           <double>999999.000000000000000</double>
-          </property>
-          <property name="value">
-           <double>99.989999999999995</double>
           </property>
          </widget>
         </item>
