--- a/src/Ui_Files/Dialogs/annotation_dialog.ui
+++ b/src/Ui_Files/Dialogs/annotation_dialog.ui
@@ -14,11 +14,84 @@
    <string>Dialog</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="2" column="1">
-    <widget class="QComboBox" name="frame_cb">
+   <item row="3" column="0">
+    <widget class="QLabel" name="label_5">
+     <property name="text">
+      <string>Frame Edge Color</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="2">
+    <widget class="QLabel" name="label_7">
+     <property name="text">
+      <string>Alpha</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QComboBox" name="framecolor"/>
+   </item>
+   <item row="1" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Size</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1">
+    <widget class="QDoubleSpinBox" name="framewidth_sb">
+     <property name="value">
+      <double>2.000000000000000</double>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QLabel" name="label_3">
+     <property name="text">
+      <string>Text</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0">
+    <widget class="QLabel" name="label_4">
+     <property name="text">
+      <string>Frame Width</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QSpinBox" name="size">
+     <property name="value">
+      <number>22</number>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="3">
+    <widget class="QDoubleSpinBox" name="alpha">
+     <property name="value">
+      <double>1.000000000000000</double>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1" colspan="3">
+    <widget class="QLineEdit" name="text">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="2">
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>Frame</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="3">
+    <widget class="QComboBox" name="frame">
      <item>
       <property name="text">
-       <string>No Frame</string>
+       <string>none</string>
       </property>
      </item>
      <item>
@@ -68,93 +141,43 @@
      </item>
     </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="QLabel" name="label">
+   <item row="6" column="0">
+    <widget class="QLabel" name="label_9">
      <property name="text">
-      <string>Size</string>
+      <string>Font Style</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="0">
-    <widget class="QLabel" name="label_4">
-     <property name="text">
-      <string>Frame Width</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0">
-    <widget class="QLabel" name="label_3">
-     <property name="text">
-      <string>Text</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="1">
-    <widget class="QSpinBox" name="size_sb">
-     <property name="value">
-      <number>18</number>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="1">
-    <widget class="QComboBox" name="framecolor_cb">
+   <item row="6" column="1">
+    <widget class="QComboBox" name="fontstyle">
      <item>
       <property name="text">
-       <string>k</string>
+       <string>normal</string>
       </property>
      </item>
      <item>
       <property name="text">
-       <string>r</string>
+       <string>italic</string>
       </property>
      </item>
      <item>
       <property name="text">
-       <string>g</string>
+       <string>oblique</string>
       </property>
      </item>
-     <item>
-      <property name="text">
-       <string>w</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>c</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>m</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>y</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>b</string>
-      </property>
-     </item>
-    </widget>
-   </item>
-   <item row="4" column="1">
-    <widget class="QDoubleSpinBox" name="framewidth_sb">
-     <property name="value">
-      <double>2.000000000000000</double>
-     </property>
     </widget>
    </item>
    <item row="2" column="0">
-    <widget class="QLabel" name="label_2">
+    <widget class="QLabel" name="label_11">
      <property name="text">
-      <string>Frame</string>
+      <string>Color</string>
      </property>
     </widget>
    </item>
-   <item row="7" column="1">
+   <item row="2" column="1">
+    <widget class="QComboBox" name="color"/>
+   </item>
+   <item row="7" column="0" colspan="4">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -164,64 +187,31 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="1">
-    <widget class="QLineEdit" name="text_le">
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="0">
-    <widget class="QLabel" name="label_5">
-     <property name="text">
-      <string>Frame Color</string>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="0">
+   <item row="2" column="2">
     <widget class="QLabel" name="label_6">
      <property name="text">
-      <string>Frame Background Color</string>
+      <string>BG color</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="1">
-    <widget class="QComboBox" name="framebgcolor_cb">
-     <item>
-      <property name="text">
-       <string>white</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>purple</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>green</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>red</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>yellow</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>blue</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>black</string>
-      </property>
-     </item>
+   <item row="2" column="3">
+    <widget class="QComboBox" name="bgcolor"/>
+   </item>
+   <item row="4" column="2">
+    <widget class="QLabel" name="label_10">
+     <property name="text">
+      <string>Rotation</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="3">
+    <widget class="QDoubleSpinBox" name="rotation">
+     <property name="maximum">
+      <double>360.000000000000000</double>
+     </property>
+     <property name="singleStep">
+      <double>45.000000000000000</double>
+     </property>
     </widget>
    </item>
   </layout>
