--- a/src/Ui_Files/Dialogs/line_dialog.ui
+++ b/src/Ui_Files/Dialogs/line_dialog.ui
@@ -26,6 +26,9 @@
    </item>
    <item row="1" column="1">
     <widget class="QDoubleSpinBox" name="line_pos_sb">
+     <property name="maximum">
+      <double>99999999.000000000000000</double>
+     </property>
      <property name="value">
       <double>75.000000000000000</double>
      </property>
